v0.8.37-0.8.42: session-id JDBC fix, UTF-8 stdio, tools gradle canonical build path, mcp.usage.db-path jvmArg, ServerLifecycleService portable claudeSyncPath, doc refresh (README/CLAUDE/FS-RESTART-SEQUENCE)